[project]
name = "funcache"
version = "0.1.1"
description = "funcache"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "cachebox==5.0.1", "cachetools>=5.5.2", "diskcache>=5.6.3", "funlog-tau>=1.0.1",]
[[project.authors]]
name = "niuliangtao"
email = "farfarfun@qq.com"

[tool.setuptools]
license-files = []
